[tool.poetry]
name = "VNU"
version = "0.1.0"
description = "A small utility to automate \"uninstalling\" Node from Volta"
authors = ["Paul Glushak <paul.glushak@forter.com>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
